test/distributions/bradc/wrongDomForDist/wrongType4.good
wrongType4.chpl:5: error: rectangular domains not supported by this distribution
